--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Saad || Fitness || Welcome</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/md-maruf-527996a9/">Home</a></li>
+            <li><a href="">Food Menu</a></li>
+            <li><a href="">Order Now</a></li>
+            <li><a href="">About Saad-Fitness</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Login</a></li>
+            <li><a href="">Signup</a></li>
+
+        </ul>
+    </header>
+
+    <section>
+        <div>
+            <h1>GYM Hard,<br> Eat Healthy Food <br> With Saad Fitness</h1>
+            <p></p>
+        </div>
+    </section>
+
+
 
 </body>
 
