second portion image completed

--- a/index.html
+++ b/index.html
@@ -27,13 +27,32 @@
         </ul>
     </header>
 
-    <section>
-        <div>
-            <h1>GYM Hard,<br> Eat Healthy Food <br> With Saad Fitness</h1>
-            <p></p>
+    <section class="display-flex">
+        <div class="width-50 header-left-text">
+            <h1><span class="orange-color-text">GYM HARD,</span><br> Eat Healthy Food <br> With Saad Fitness Team</h1>
+            <p>Saad Fitness, is with you for healthy lifestyle. Within Covid-19 we serve healthy food in your
+                door. Stay home, stay safe, enjoy meal with Saad Fitness</p>
+            <div id="top-order-food">
+                <a href="https://www.linkedin.com/in/md-maruf-527996a9/">Order Food</a>
+            </div>
+        </div>
+
+        <div class="width-50 slider-image">
+            <img src="images/Group 8425.png" alt="saad fitness">
         </div>
     </section>
 
+    <section class="second-section">
+        <div class="width-50">
+            <img src="images/Person Image.png" alt="second section image">
+        </div>
+
+        <div class="width-50 second-section-text">
+            <h1>About Me</h1>
+            <p>i am Engineer Maruf, Interested in having good quality Food and new one. </p>
+            <a href="https://www.linkedin.com/in/md-maruf-527996a9/">Contact me</a>
+        </div>
+    </section>
 
 
 </body>
