footer area started

--- a/index.html
+++ b/index.html
@@ -49,11 +49,58 @@
 
         <div class="width-50 second-section-text">
             <h1>About Me</h1>
-            <p>i am Engineer Maruf, Interested in having good quality Food and new one. </p>
-            <a href="https://www.linkedin.com/in/md-maruf-527996a9/">Contact me</a>
+            <p>I am Engineer Maruf, Interested in having good quality Food and new one. Health is the key of success and
+                healthy food is mandatory for healthy and fit body. Saad Fitness is beside you for your healthy life
+            </p>
+            <div class="button">
+                <a href="https://www.linkedin.com/in/md-maruf-527996a9/" class="">Contact me</a>
+            </div>
         </div>
     </section>
 
+
+    <article>
+        <h1>My Recipies</h1>
+        <p>Saad Fitness is well known for his rich food quality and On time Delivery <br> Meats, poultry and fish:
+            Sirloin
+            steak, ground beef, are available i our,<br>
+            24/7 online shop</p>
+    </article>
+
+    <section class="recipie">
+        <div class="left-recepie">
+            <img src="images/Project Cover.jpg" alt="Jimmy Dean">
+            <h1>Jimmy Dean</h1>
+            <p>Saad Fitness's hot product is Jimmy Dean. Greet the day with a warm sausage, egg and cheese biscuit
+                breakfast sandwich. </p>
+        </div>
+
+        <div class="left-recepie">
+            <img src="images/beef fry.jpg" alt="beef fry">
+            <h1>Beef Fry</h1>
+            <p>To fulfil your neutritions and gain muscle beef is mendatory. You are most welcome to our special food
+                item naming saad beef fry </p>
+        </div>
+
+        <div class="left-recepie">
+            <img src="images/chicken Soup.png" alt="Chicken Soup">
+            <h1>Chicken Soup</h1>
+            <p>Congratulations you are with Saad Fitness. The chicken soup is our special one item with full of
+                nutritian</p>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1>700K</h1>
+            <p>Youtube Subscriber</p>
+        </div>
+        <div>
+            <h1>2.4m</h1>
+            <p>Instagram followers</p>
+        </div>
+
+    </section>
 
 </body>
 
