--- a/index.html
+++ b/index.html
@@ -90,17 +90,28 @@
         </div>
     </section>
 
-    <section>
-        <div>
+    <section class="subscribe-area">
+        <div class="sub-area-text">
             <h1>700K</h1>
             <p>Youtube Subscriber</p>
         </div>
-        <div>
+        <div class="sub-area-text">
             <h1>2.4m</h1>
             <p>Instagram followers</p>
         </div>
+        <div class="sub-area-text">
+            <h1>100k</h1>
+            <p>Dribble Shot Likes</p>
+        </div>
 
     </section>
+
+    <footer>
+        <div style="margin-top: 30px;">
+            <h1><span class="orange-color-text">SAAD </span>FITNESS</h1>
+            <small>Welcome to Saad Fitness. Feel Free to contact with us</small>
+        </div>
+    </footer>
 
 </body>
 
